lista 6 dodawanie rzedow i kolumn